--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,15 @@ pygame==2.0.0.dev10
 dlib==19.21.0
 opencv-python==4.5.0
 imutils==0.5.3
+face_utils
+
+Installation of dlib is quiet a difficult task
+for new contributor.
+
+For python 3.10 version  you can simply download the dlib for python 3.10
+
+For further versions you can use another option
+
+Download cmake and do installation,place the cmake bim in path.
+
+Use yt preferences to install dlib through visual studio community build.
